@@ -1,5 +1,6 @@
 Revision history for Coverage::Server
 
+          - Merged CommonLinks and Preferences in PageConfiguration
           - Moved Listener to Server
           - Moved cdnjs to config file
           - Updated skip lists
